cabal-version:       2.4
name:                Snake-Arena
version:             0.1.0.0
synopsis:            A pure-functional real-time Snake game with UI and Analytics
license:             MIT
author:              Antigravity
maintainer:          none
category:            Game
build-type:          Simple

executable snake-arena
  main-is:             Main.hs
  other-modules:       DataTypes, Processing, IOHandler, Utils
  hs-source-dirs:      src
  build-depends:       base >= 4.12 && < 5,
                       gloss,
                       random,
                       time,
                       containers,
                       directory
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -O2
